--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <html>
 <body>
-<img src="tele.jpg"/>
-<img src="map.png"/>
-<img src="1.jpg"/>
-<img src="2.jpg"/>
-<img src="3.jpg"/>
-<img src="4.jpg"/>
-<img src="5.jpg"/>
-<img src="6.jpg"/>
-<img src="7.jpg"/>
-<img src="8.jpg"/>
-<img src="9.jpg"/>
+<img src="a1.jpg"/>
+<img src="a2.png"/>
+<img src="a3.jpg"/>
+<img src="a4.jpg"/>
+<img src="a5.jpg"/>
+<img src="a6.jpg"/>
+<img src="a7.jpg"/>
+<img src="a8.jpg"/>
+<img src="a9.jpg"/>
+<img src="a10.jpg"/>
 
 </body>
 </html>
